--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,8 @@
 @layer base {
   html {
     scroll-behavior: smooth;
+  }
+  body {
     font-family: "Lora", serif;
   }
 }
@@ -30,45 +32,9 @@
 }
 
 .wraper {
-  width: calc(100% - 20px);
-  margin-left: auto;
-  margin-right: auto;
+  @apply max-w-[1440px] mx-auto px-5 md:px-8;
 }
-@media (min-width: 640px) {
-  .wraper {
-    max-width: calc(100% - 40px);
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
-@media (min-width: 768px) {
-  .wraper {
-    max-width: calc(100% - 80px);
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
-@media (min-width: 1024px) {
-  .wraper {
-    max-width: calc(100% - 120px);
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
-@media (min-width: 1280px) {
-  .wraper {
-    max-width: calc(100% - 160px);
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
-@media (min-width: 1536px) {
-  .wraper {
-    max-width: calc(100% - 160px);
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
+
 .gradientBlue {
   /* global 94%+ browsers support */
   background: linear-gradient(
